# app/Models/Tweet.php
@@ -10,12 +10,6 @@ use Illuminate\Database\Eloquent\SoftDeletes;
  *      definition="Tweet",
  *      required={"text_en", "text_ar"},
  *      @SWG\Property(
- *          property="id",
- *          description="id",
- *          type="integer",
- *          format="int32"
- *      ),
- *      @SWG\Property(
  *          property="text_en",
  *          description="text_en",
  *          type="string"
@@ -24,18 +18,6 @@ use Illuminate\Database\Eloquent\SoftDeletes;
  *          property="text_ar",
  *          description="text_ar",
  *          type="string"
- *      ),
- *      @SWG\Property(
- *          property="created_at",
- *          description="created_at",
- *          type="string",
- *          format="date-time"
- *      ),
- *      @SWG\Property(
- *          property="updated_at",
- *          description="updated_at",
- *          type="string",
- *          format="date-time"
  *      )
  * )
  */
